--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-
+<!-- 
 <h1 class="mytitle">{{ title2 }}</h1>
 
-<app-string-interpolation></app-string-interpolation>
+<app-string-interpolation></app-string-interpolation> -->
+
+<!-- <app-property-bindig></app-property-bindig> -->
+
+<app-event-binding></app-event-binding>
